[gd_scene load_steps=5 format=3 uid="uid://br4sb0wwxwr2o"]

[ext_resource type="Script" uid="uid://62suwvfwb2yg" path="res://Scripts/spells/spellsystem/spell_manager.gd" id="1_puv1a"]
[ext_resource type="PackedScene" uid="uid://c5du1g626to65" path="res://Scenes/RewardScreen/equipped_spells_container.tscn" id="2_peavi"]
[ext_resource type="Theme" uid="uid://qw5wdr2jerv7" path="res://Art/text/default_font.tres" id="6_g4xtm"]
[ext_resource type="Script" uid="uid://be13s32sf0pr1" path="res://Scripts/spells/spellsystem/spell_choice_menu.gd" id="6_rdgyv"]

[node name="SpellManager" type="Node2D"]
script = ExtResource("1_puv1a")

[node name="EquippedSpellsContainer" parent="." instance=ExtResource("2_peavi")]

[node name="SpellChoiceMenu" type="CanvasLayer" parent="."]
layer = 4
visible = false
script = ExtResource("6_rdgyv")

[node name="ColorRect" type="ColorRect" parent="SpellChoiceMenu"]
anchors_preset = -1
anchor_left = 0.362
anchor_top = 0.411
anchor_right = 0.634
anchor_bottom = 0.622
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.137255, 0.121569, 0.278431)

[node name="VBoxContainer" type="VBoxContainer" parent="SpellChoiceMenu/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.211
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="SpellChoiceMenu/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="SpellChoiceMenu/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="SpellChoiceMenu/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="RichTextLabel" parent="SpellChoiceMenu/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.026
anchor_right = 1.0
anchor_bottom = 0.166
theme = ExtResource("6_g4xtm")
text = "Choose a spell to replace"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="remove_spell" from="SpellChoiceMenu" to="." method="spell_to_remove_selected"]
[connection signal="pressed" from="SpellChoiceMenu/ColorRect/VBoxContainer/Button" to="SpellChoiceMenu" method="_on_button_pressed"]
[connection signal="pressed" from="SpellChoiceMenu/ColorRect/VBoxContainer/Button2" to="SpellChoiceMenu" method="_on_button_2_pressed"]
[connection signal="pressed" from="SpellChoiceMenu/ColorRect/VBoxContainer/Button3" to="SpellChoiceMenu" method="_on_button_3_pressed"]
